// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<InViewport
  offset={0}
  testId="cf-ui-in-viewport"
>
  <div
    className="InViewport"
    data-test-id="cf-ui-in-viewport"
    offset={0}
  >
    <TextLink
      disabled={false}
      linkType="primary"
      testId="cf-ui-text-link"
    >
      <button
        className="TextLink TextLink--primary"
        data-test-id="cf-ui-text-link"
        disabled={false}
        type="button"
      >
        <TabFocusTrap>
          <span
            className="TabFocusTrap"
            tabIndex={-1}
          >
            Some Link
          </span>
        </TabFocusTrap>
      </button>
    </TextLink>
  </div>
</InViewport>
`;

exports[`renders the component with an additional class name 1`] = `
<InViewport
  extraClassNames="my-extra-class"
  offset={0}
  testId="cf-ui-in-viewport"
>
  <div
    className="InViewport my-extra-class"
    data-test-id="cf-ui-in-viewport"
    offset={0}
  >
    <TextLink
      disabled={false}
      linkType="primary"
      testId="cf-ui-text-link"
    >
      <button
        className="TextLink TextLink--primary"
        data-test-id="cf-ui-text-link"
        disabled={false}
        type="button"
      >
        <TabFocusTrap>
          <span
            className="TabFocusTrap"
            tabIndex={-1}
          >
            Some Link
          </span>
        </TabFocusTrap>
      </button>
    </TextLink>
  </div>
</InViewport>
`;
